# puppylog

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  bun.lockb  clear.sh  devserver.ts  gpt.py  package-lock.json  package.json  rustfmt.toml  train.py  tsconfig.json  watch.bat  watch.sh
.github/workflows/: bench.yml  ci.yaml  release-cli.yaml
assets/: index.html  manifest.json  puppylog.css  puppylog.js
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: log_search.rs
core/src/: chunk_reader.rs  circle_buffer.rs  drain.rs  lib.rs  log_buffer.rs  log_buffer2.rs  log_rotator.rs  logentry.rs  logfile.rs  logger.rs  logrotator_test.rs  query_eval.rs  query_parsing.rs
examples/device-simulator/: Cargo.toml
examples/device-simulator/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
logen/: Cargo.toml
logen/src/: main.rs
python/: fakedata.py  gpt.py  logen.py  logentry.py  loggpt.py  test-dataset.py  test_hadoop.ipynb  train.py
scripts/: install-plog.ps1  install-plog.sh
src/: app.ts  auth.rs  background.rs  cache.rs  cleanup.rs  config.rs  context.rs  controllers.rs  db.rs  dev_segment_merger.rs  device_segment_compactor.rs  lib.rs  log_query.rs  logline.rs  logtable.ts  main.rs  merger.rs  parsing.rs  picker.rs  query_eval.rs  schema.rs  search.rs  segment.rs  server_info.rs  settings.rs  slack.rs  storage.rs  subscribe_worker.rs  subscriber.rs  types.rs  ui.rs  upload.rs  upload_guard.rs  utility.rs  wal.rs  worker.rs
ts/: app.ts  auth.ts  buckets.ts  common.ts  device-page.ts  devices.ts  histogram.ts  http.ts  log-buckets.ts  logmsg.ts  logs.ts  logtable-test.ts  logtable.ts  main-page.ts  navbar.ts  pattern-matcher.test.ts  pattern-matcher.ts  pivot.ts  queries.ts  router.test.ts  router.ts  segment-page.ts  server.ts  settings.ts  sign-in-page.ts  types.ts  ui.ts  utility.ts  virtual-table.ts
wui/: ui.wui
