[package]
name = "puppylog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["decompression-gzip", "cors"] }
futures-util = "0.3"
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
byteorder = "1"
bytes = "1"