[workspace] 
members = ["core", "examples/*","cli"]
[package]
name = "puppylog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["decompression-gzip", "cors"] }
futures-util = "0.3"
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
puppylog = { path = "core" }
chrono = { workspace = true }
log = "0.4"
simple_logger = "5"
anyhow = "1"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "puppylog"
path = "src/main.rs"
