[workspace] 
members = ["core", "examples/*","cli"]
[package]
name = "puppylog-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
headers = "0.4"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["decompression-gzip", "decompression-zstd", "compression-gzip", "compression-zstd", "cors"] }
futures-util = "0.3"
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
puppylog = { path = "core" }
chrono = { workspace = true }
log = "0.4"
simple_logger = "5"
anyhow = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
rand = "0.9"
rusqlite = { version =  "0.33", features = ["bundled", "chrono"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
lru = "0.14"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
serial_test = "3"
hyper = { version = "1", features = ["full"] }

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "puppylog"
path = "src/main.rs"
