[package]
name = "puppylogcli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
flate2 = "1"
lazy_static = "1"
puppylog = { path = "../core" }
log = "0.4"