[package]
name = "puppylog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
byteorder = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
bytes = "1"
regex = "1"
serde_json = "1"
webpki-roots = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
native-tls = { version = "0.2", optional = true }
tungstenite = { version = "0.26", features = ["native-tls"]}

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "log_search"
harness = false

[[bench]]
name = "log_search"
harness = false

[features]
default = ["nativetls"]
# ws = ["tungstenite"]
rusttls = ["rustls", "webpki-roots"]
nativetls = ["native-tls"]
