[package]
name = "device_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
puppylog = { path = "../../core" }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2"
